# jarvis-mcp

./: .gitignore  AGENTS.md  README.md  jarvis.py  jarvis_tui.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
macOs/Jarvis/Jarvis/: JarvisMCPApp.swift
macOs/Jarvis/Jarvis/Models/: AppState.swift  Preset.swift  ServerConfig.swift
macOs/Jarvis/Jarvis/Services/: LogTailer.swift  LogViewerView.swift  ProcessManager.swift
macOs/Jarvis/Jarvis/Views/: ContentView.swift  PresetsView.swift  ServerDetailView.swift  SettingsView.swift
scripts/: build_jarvis_binary.sh  build_jarvis_binary_linux.sh
src/jarvis/: __main__.py  api.py  config.py  middleware.py  proxy.py  search.py  tui.py
tests/: conftest.py
tests/integration/: test_api_endpoints.py  test_api_errors.py  test_tui_auth_manager.py  test_tui_mcp_manager.py
tests/unit/: test_api_helpers.py  test_config.py  test_middleware.py  test_probe.py  test_proxy.py  test_tui.py
